# wasm_components_host_example

./: Cargo.toml  Readme.md  main.wasm  run.sh
python/: main.py
python/add/: __init__.py  intrinsics.py  root.core0.wasm
src/: bindings.rs  main.rs
wit/: world.wit
